	2.6.9-42.0.8.EL (RHEL 4)
       * Recommended e2fsprogs version: 1.39.cfs7
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * bug fixes

Severity   : normal
Frequency  : rare
Bugzilla   : 11722
Description: Transient SCSI error results in persistent IO issue
Details    : iobuf->dr_error is not reinitialized to 0 between two
	     uses.

Severity   : normal
Frequency  : SLES10 only
Bugzilla   : 12538
Description: sanity-quota.sh quotacheck failed: rc = -22
Details    : Quotas cannot be enabled on SLES10.

Severity   : normal
Frequency  : liblustre clients only
Bugzilla   : 12229
Description: getdirentries does not give error when run on compute nodes
Details    : getdirentries does not fail when the size specified as an argument
	     is too small to contain at least one entry

Severity   : enhancement
Bugzilla   : 11548
Description: Add LNET router traceability for debug purposes
Details    : If a checksum failure occurs with a router as part of the
	     IO path, the NID of the last router that forwarded the bulk data
	     is printed so it can be identified.

Severity   : normal
Frequency  : rare
Bugzilla   : 11315
Description: OST "spontaneously" evicts client; client has imp_pingable == 0
Details    : Due to a race condition, liblustre clients were occasionally
	     evicted incorrectly.

Severity   : enhancement
Bugzilla   : 10997
Description: lfs setstripe use optional parameters instead of postional
	     parameters.

Severity   : enhancement
Bugzilla   : 10651
Description: Nanosecond timestamp support for ldiskfs
Details    : The on-disk ldiskfs filesystem has added support for nanosecond
	     resolution timestamps.  There is not yet support for this at
	     the Lustre filesystem level.

Severity   : normal
Frequency  : during server recovery
Bugzilla   : 11203
Description: MDS failing to send precreate requests due to OSCC_FLAG_RECOVERING
Details    : request with rq_no_resend flag not awake l_wait_event if they get a